feat: set workflow_run

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,6 +1,10 @@
 name: Unit Tests
 
-on: [push]
+on:
+  workflow_run:
+    workflows: ["Build and Format"]
+    types:
+      - completed
 
 jobs:
   start-spot-vm:
