--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,35 +1,8 @@
 name: Unit Tests
 
-on:
-  workflow_run:
-    workflows: [Build and Format]
-    types:
-      - completed
+on: [push]
 
 jobs:
-  start-spot-vm:
-    name: Start Spot VM
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Authenticate with GCP
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-
-      - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v2'
-        with:
-          version: '>= 363.0.0'
-
-      - name: Start Spot VM
-        run: gcloud compute instances start email-tx-builder-runner-spot --zone=us-central1-c
-
-      - name: Wait for Spot VM to initialize
-        run: |
-          echo "Waiting for Spot VM to initialize..."
-          sleep 60
-
   circuits:
     name: circuits
     runs-on: self-hosted
@@ -125,21 +98,3 @@ jobs:
       - name: Run tests
         working-directory: packages/relayer
         run: cargo test
-
-  stop-spot-vm:
-    name: Stop Spot VM
-    needs: [circuits, contracts, relayer]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Authenticate with GCP
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-
-      - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v2'
-        with:
-          version: '>= 363.0.0'
-
-      - name: Stop Spot VM
-        run: gcloud compute instances stop email-tx-builder-runner-spot --zone=us-central1-c
