--- a/.github/workflows/build-fmt.yml
+++ b/.github/workflows/build-fmt.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build-and-format:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
