--- a/packages/relayer/Cargo.toml
+++ b/packages/relayer/Cargo.toml
@@ -19,12 +19,12 @@ async-native-tls = { version = "0.5.0", default-features = false, features = [
     "runtime-tokio",
 ] }
 serde = { version = "1.0", features = ["derive"] }
-webbrowser = "0.8.11"
+# webbrowser = "0.8.11"
 serde_json = "1.0.68"
 tiny_http = "0.12.0"
 lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls"] }
 ethers = { version = "2.0.10", features = ["abigen"] }
-relayer-utils = { version = "0.4.2", git = "https://github.com/zkemail/relayer-utils.git" }
+relayer-utils = { version = "0.4.60", git = "https://github.com/zkemail/relayer-utils.git" }
 futures = "0.3.28"
 sqlx = { version = "=0.7.3", features = [
     "postgres",
@@ -60,6 +60,7 @@ ic-utils = "0.37.0"
 candid = "0.10.10"
 thiserror = "1.0.63"
 rustc-hex = "2.1.0"
+home = "=0.5.9"
 
 [build-dependencies]
 ethers = "2.0.10"
