Update github actions

--- a/.github/workflows/build-fmt.yml
+++ b/.github/workflows/build-fmt.yml
@@ -44,6 +44,9 @@ jobs:
         with:
           node-version: 18
           cache: "yarn"
+      
+      - name: Cache clean
+        run: yarn cache clean
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
