--- a/packages/relayer/Cargo.toml
+++ b/packages/relayer/Cargo.toml
@@ -20,7 +20,7 @@ sqlx = { version = "0.8.2", features = [
 bigdecimal = "0.3.1"
 tokio = { version = "1.40.0", features = ["full"] }
 tower-http = { version = "0.6.1", features = ["cors"] }
-relayer-utils = { git = "https://github.com/zkemail/relayer-utils.git", branch = "feat/gpu_prover" }
+relayer-utils = { git = "https://github.com/zkemail/relayer-utils.git", branch = "main" }
 slog = { version = "2.7.0", features = [
     "max_level_trace",
     "release_max_level_warn",
