--- a/packages/relayer/Cargo.toml
+++ b/packages/relayer/Cargo.toml
@@ -24,7 +24,7 @@ serde_json = "1.0.68"
 tiny_http = "0.12.0"
 lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls"] }
 ethers = { version = "2.0.10", features = ["abigen"] }
-relayer-utils = { version = "0.4.60", git = "https://github.com/zkemail/relayer-utils.git" }
+relayer-utils = { git = "https://github.com/zkemail/relayer-utils.git", branch = "main" }
 futures = "0.3.28"
 sqlx = { version = "=0.7.3", features = [
     "postgres",
@@ -53,7 +53,7 @@ slog-term = "2.9.0"
 slog-json = "2.6.1"
 file-rotate = "0.7.5"
 base64 = "0.21.7"
-uuid = "1.8.0"
+uuid = { version = "1.8.0", features = ["v4"] }
 http = "1.1.0"
 ic-agent = { version = "0.37.1", features = ["pem", "reqwest"] }
 ic-utils = "0.37.0"
