chore: update .env.example

--- a/packages/relayer/.env.example
+++ b/packages/relayer/.env.example
@@ -6,7 +6,12 @@ CHAIN_ID=11155111                    # Chain ID of the testnet.
 
 SMTP_SERVER=
 
-PROVER_ADDRESS="https://zkemail--email-auth-prover-v1-5-0-flask-app.modal.run"
+PROVER_URL="https://prover.zk.email/api/prove"
+PROVER_API_KEY=""
+PROVER_BLUEPRINT_ID="7f3c3bc2-7c5d-4682-8d7f-f3d2f9046722"
+PROVER_ZKEY_DOWNLOAD_URL="https://storage.googleapis.com/circom-ether-email-auth/v2.0.2-dev/circuit_zkey.zip"
+PROVER_CIRCUIT_CPP_DOWNLOAD_URL="https://storage.googleapis.com/circom-ether-email-auth/v2.0.2-dev/circuit.zip"
+
 
 DATABASE_URL= "postgres://test@localhost/emailauth_test"
 RELAYER_EMAIL_ADDR=
