chore: add circuit test job yaml
chore: add actions/checkout@v3

chore: add Install gke-gcloud-auth-plugin

chore: add entry point

chore: add test job yaml and Dockerfile with entrypoint script

--- a/.github/circuits-runner/Dockerfile
+++ b/.github/circuits-runner/Dockerfile
@@ -27,8 +27,12 @@ RUN mkdir -p /root/bin && \
 # Install Yarn
 RUN npm install -g yarn
 
-# Set working directory
-WORKDIR /workspace
+# Install Git
+RUN apt-get update && apt-get install -y git
+
+# Add entrypoint script
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
 # Entrypoint
-CMD ["sh", "-c", "yarn install --frozen-lockfile && cd packages/circuits && yarn test --maxWorkers=75% --no-cache"]
+ENTRYPOINT ["/entrypoint.sh"]
