--- a/kubernetes/circuit-test-job.yml
+++ b/kubernetes/circuit-test-job.yml
@@ -8,7 +8,8 @@ spec:
     spec:
       containers:
         - name: circuits-runner
-          image: wshino/circuits-runner@sha256:3a089cde127bc40fd2244c555e01d51fe4a7abfa4bd636108723c8dfa8ae7a45
+          image: wshino/circuits-runner:test2
+          imagePullPolicy: Always  # Always pull the latest image
           env:
             - name: REPO_URL
               value: "${REPO_URL}"
