--- a/packages/safe_notification_service/tsconfig.json
+++ b/packages/safe_notification_service/tsconfig.json
@@ -28,6 +28,8 @@
             "@/*": [
                 "src/*"
             ]
-        }
+        },
+        "resolveJsonModule": true,
+        "esModuleInterop": true
     }
 }
