--- a/packages/safe_notification_service/package.json
+++ b/packages/safe_notification_service/package.json
@@ -4,7 +4,10 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "vitest": "^1.3.1",
+    "supertest": "^6.3.4",
+    "@types/supertest": "^6.0.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -22,6 +25,12 @@
   },
   "scripts": {
     "start": "bun run src/index.ts",
-    "dev": "bun --watch run src/index.ts"
+    "dev": "bun --watch run src/index.ts",
+    "test": "NODE_ENV=test vitest"
+  },
+  "vitest": {
+    "setupFiles": [
+      "src/__tests__/setup.ts"
+    ]
   }
 }
