--- a/packages/safe_notification_service/package.json
+++ b/packages/safe_notification_service/package.json
@@ -21,7 +21,8 @@
     "nodemailer": "^6.10.0",
     "prisma": "^6.4.0",
     "viem": "^2.23.3",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "winston": "^3.11.0"
   },
   "scripts": {
     "start": "bun run src/index.ts",
