feat: Add Redis and chains configuration for notification service

--- a/packages/safe_notification_service/.gitignore
+++ b/packages/safe_notification_service/.gitignore
@@ -101,6 +101,7 @@ web_modules/
 # dotenv environment variable files
 
 .env
+src/config/chains.json
 .env.development.local
 .env.test.local
 .env.production.local
