--- a/packages/safe_notification_service/docker-compose.yml
+++ b/packages/safe_notification_service/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:15
@@ -21,5 +19,14 @@ services:
     ports:
       - "5433:5432"
 
+  redis:
+    image: redis:7
+    command: redis-server --requirepass samplepassword
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
 volumes:
   postgres_data:
+  redis_data:
