--- a/packages/safe_notification_service/example.env
+++ b/packages/safe_notification_service/example.env
@@ -1,2 +1,3 @@
 PORT=3000
 DATABASE_URL="postgresql://user:password@localhost:5432/safe_monitor"
+REDIS_URL="redis://:samplepassword@localhost:6379"
