feat: Add private key configuration for chain-specific wallet clients

--- a/packages/safe_notification_service/example.env
+++ b/packages/safe_notification_service/example.env
@@ -1,3 +1,4 @@
 PORT=3000
 DATABASE_URL="postgresql://user:password@localhost:5432/safe_monitor"
+RELAYER_URL=
 REDIS_URL="redis://:samplepassword@localhost:6379"
