--- a/packages/safe-notification-service/package.json
+++ b/packages/safe-notification-service/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest",
-    "vitest": "^1.3.1",
+    "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "supertest": "^6.3.4",
-    "@types/supertest": "^6.0.2"
+    "vitest": "^1.3.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -23,6 +24,7 @@
     "express": "^4.21.2",
     "nodemailer": "^6.10.0",
     "prisma": "^6.4.0",
+    "uuid": "^11.1.0",
     "viem": "^2.23.5",
     "winston": "^3.11.0",
     "zod": "^3.24.2"
