--- a/packages/safe-notification-service/package.json
+++ b/packages/safe-notification-service/package.json
@@ -17,9 +17,11 @@
     "@prisma/client": "^6.4.0",
     "@safe-global/safe-core-sdk": "^3.3.5",
     "@safe-global/safe-core-sdk-types": "^5.1.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/nodemailer": "^6.4.17",
     "bullmq": "^5.41.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemailer": "^6.10.0",
