--- a/packages/safe-notification-service/.env.example
+++ b/packages/safe-notification-service/.env.example
@@ -1,4 +1,5 @@
-PORT=3000
+PORT=3030
 DATABASE_URL="postgresql://user:password@localhost:5432/safe_monitor"
 RELAYER_URL=
+CORS_ORIGIN="http://localhost:3000"
 SAFE_TX_SERVICE_URL=
