chore: example envs updated

--- a/packages/safe-notification-service/.env.example
+++ b/packages/safe-notification-service/.env.example
@@ -1,5 +1,5 @@
 PORT=3030
-DATABASE_URL="postgresql://user:password@localhost:5432/safe_monitor"
-RELAYER_URL=
-CORS_ORIGIN="http://localhost:3000"
-SAFE_TX_SERVICE_URL=
+DATABASE_URL=postgresql://user:password@localhost:5432/safe_monitor
+RELAYER_URL=https://safe-2fa-relayer.zk.email
+SAFE_TX_SERVICE_URL=https://dev.sepolia2.transaction.keypersafe.xyz/api
+CORS_ORIGIN=http://localhost:3000
