fix: chains config removed

--- a/packages/safe-notification-service/.env.example
+++ b/packages/safe-notification-service/.env.example
@@ -2,3 +2,6 @@ PORT=3030
 DATABASE_URL=postgresql://user:password@localhost:5432/safe_monitor
 RELAYER_URL=https://safe-2fa-relayer.zk.email
 CORS_ORIGIN=http://localhost:3000
+RPC_URL=https://ethereum-sepolia-rpc.publicnode.com
+FACTORY_ADDRESS=0x86227311CeDA2dbF64123854bcc359D6C4cDB8a3
+PRIVATE_KEY=
