--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ SMTP_LOGIN_ID=thezdev1@gmail.com    # IMAP login id - usually your email address
 SMTP_LOGIN_PASSWORD=""  # IMAP password - usually your email password.
 SMTP_MESSAGE_ID_DOMAIN=mail.gmail.com
 SMPT_JSON_LOGGER=true
+SMTP_EMAIL_SENDER_NAME=Email Wallet
 
 # Imap service - for receiving emails from users
 IMAP_LOGIN_ID=thezdev1@gmail.com
