--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -8,7 +8,7 @@
     "build-recipient": "mkdir -p build && circom src/email_auth_with_recipient.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build",
     "dev-setup": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build",
     "gen-input": "NODE_OPTIONS=--max_old_space_size=8192 npx ts-node scripts/gen_input.ts",
-    "test": "bun test --memory-limit 32768 --threads 8"
+    "test": "bun test"
   },
   "dependencies": {
     "@zk-email/circuits": "=6.3.2",
