chore: ignore bun.lock

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,6 @@ example/contracts/cache
 example/contracts/node_modules
 example/scripts/dist
 example/contracts/broadcast
+
+# lock files
+bun.lock
