--- a/packages/circuits/tsconfig.json
+++ b/packages/circuits/tsconfig.json
@@ -12,7 +12,8 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "types": [
-            "node"
+            "node",
+            "jest"
         ]
     },
     "include": [
