--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@zk-email/circuits": "=6.3.2",
-    "@zk-email/relayer-utils": "=0.4.60-2",
+    "@zk-email/relayer-utils": "=0.4.60-2-phone-number",
     "@zk-email/zk-regex-circom": "=2.3.1",
     "commander": "^12.1.0",
     "snarkjs": "=0.7.5"
