--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -26,6 +26,10 @@ jobs:
         run: |
           gcloud container clusters get-credentials ${{ secrets.YOUR_CLUSTER_NAME }} --region ${{ secrets.YOUR_REGION }}
 
+      - name: Delete existing job if it exists
+        run: |
+          kubectl delete job circuits-job --ignore-not-found=true
+
       - name: Prepare and Deploy Circuits Job to GKE
         env:
           REPO_URL: "https://github.com/${{ github.repository }}"
@@ -42,7 +46,7 @@ jobs:
 
       - name: Wait for Job to Complete
         run: |
-          kubectl wait --for=condition=complete --timeout=1800s job/circuits-job
+          kubectl wait --for=condition=complete --timeout=3600s job/circuits-job
 
       - name: Stream Logs from GKE
         run: |
