--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-react": "^7.22.0",
     "@babel/preset-typescript": "^7.21.5",
     "@types/jest": "^29.5.4",
+    "@types/node": "^22.14.1",
     "babel-jest": "^29.5.0",
     "babel-preset-jest": "^29.5.0",
     "jest": "^29.5.0",
