--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -10,11 +10,12 @@
     "dev-setup": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build --circuit email_auth",
     "dev-setup-no-timestamp": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build/no-timestamp --circuit email_auth_no_timestamp",
     "gen-input": "NODE_OPTIONS=--max_old_space_size=8192 npx ts-node scripts/gen_input.ts",
-    "test": "bun test"
+    "test": "NODE_OPTIONS=--max_old_space_size=16384 jest",
+    "test:large": "NODE_OPTIONS=--max_old_space_size=32768 jest --maxWorkers=1"
   },
   "dependencies": {
     "@zk-email/circuits": "=6.3.2",
-    "@zk-email/relayer-utils": "=0.4.60-2",
+    "@zk-email/relayer-utils": "=0.4.60-2-jest",
     "@zk-email/zk-regex-circom": "=2.3.1",
     "commander": "^12.1.0",
     "snarkjs": "=0.7.5"
@@ -23,7 +24,7 @@
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-typescript": "^7.23.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.16",
+    "@types/node": "^22.14.1",
     "chai": "^4.3.7",
     "circom_tester": "^0.0.20",
     "circomlib": "^2.0.5",
