--- a/packages/circuits/tsconfig.json
+++ b/packages/circuits/tsconfig.json
@@ -3,7 +3,8 @@
         "target": "es2020",
         "module": "commonjs",
         "lib": [
-            "es2020"
+            "es2020",
+            "dom"
         ],
         "strict": true,
         "esModuleInterop": true,
