chore: add Git configuration step to use HTTPS in unit tests workflow

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -76,7 +76,11 @@ jobs:
       - name: Run tests
         working-directory: packages/contracts
         run: yarn test
-        
+
+      - name: Configure Git to use HTTPS
+        run: |
+          git config --global url."https://github.com/".insteadOf "ssh://git@github.com/"
+          git config --global url."https://github.com/".insteadOf "git@github.com:"
   relayer:
     name: relayer
     runs-on: ubuntu-latest
@@ -106,3 +110,8 @@ jobs:
       - name: Run tests
         working-directory: packages/relayer
         run: cargo test
+
+      - name: Configure Git to use HTTPS
+        run: |
+          git config --global url."https://github.com/".insteadOf "ssh://git@github.com/"
+          git config --global url."https://github.com/".insteadOf "git@github.com:"
