--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "ds-test": "https://github.com/dapphub/ds-test",
-    "forge-std": "https://github.com/foundry-rs/forge-std",
+    "forge-std": "https://github.com/foundry-rs/forge-std.git",
     "solhint": "^3.6.1"
   },
   "files": [
