--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -19,7 +19,7 @@
     "solidity-stringutils": "https://github.com/LayerZero-Labs/solidity-stringutils.git"
   },
   "devDependencies": {
-    "ds-test": "https://github.com/dapphub/ds-test",
+    "ds-test": "https://github.com/dapphub/ds-test.git",
     "forge-std": "https://github.com/foundry-rs/forge-std.git",
     "solhint": "^3.6.1"
   },
