--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -11,7 +11,7 @@
     "dev-setup-no-timestamp": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build/no-timestamp --circuit email_auth_no_timestamp",
     "gen-input": "NODE_OPTIONS=--max_old_space_size=8192 npx ts-node scripts/gen_input.ts",
     "test": "NODE_OPTIONS=--max_old_space_size=16384 jest",
-    "test-large": "NODE_OPTIONS=--max_old_space_size=32768 jest"
+    "test-large": "NODE_OPTIONS=--max_old_space_size=32768 jest --maxWorkers=1"
   },
   "dependencies": {
     "@zk-email/circuits": "=6.3.2",
