--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -3,14 +3,8 @@
   "license": "MIT",
   "version": "1.0.3",
   "scripts": {
-    "build": "mkdir -p build && circom src/email_auth.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build",
-    "build-no-timestamp": "mkdir -p build/no-timestamp && circom src/email_auth_no_timestamp.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build/no-timestamp",
-    "build-reveal": "mkdir -p build/reveal && circom src/email_auth_reveal.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build/reveal",
-    "build-legacy": "mkdir -p build && circom src/email_auth_legacy.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build",
-    "build-recipient": "mkdir -p build && circom src/email_auth_with_recipient.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build",
-    "dev-setup": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build --circuit email_auth",
-    "dev-setup-no-timestamp": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build/no-timestamp --circuit email_auth_no_timestamp",
-    "dev-setup-reveal": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build/reveal --circuit email_auth_reveal",
+    "build": "node -e \"const args=process.argv.slice(2); const circuit=args[0]||'email_auth'; const output=args[1]||'.'; require('child_process').execSync('mkdir -p build/'+output+' && circom src/'+circuit+'.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build/'+output, {stdio:'inherit'})\"",
+    "dev-setup": "node -e \"const args=process.argv.slice(2); const circuit=args[0]||'email_auth'; const output=args[1]||'.'; require('child_process').execSync('NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build/'+output+' --circuit '+circuit, {stdio:'inherit'})\"",
     "gen-input": "NODE_OPTIONS=--max_old_space_size=8192 npx ts-node scripts/gen_input.ts",
     "test": "NODE_OPTIONS=--max_old_space_size=16384 jest",
     "test-large": "NODE_OPTIONS=--max_old_space_size=32768 jest --maxWorkers=1"
