--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -3,8 +3,8 @@
   "license": "MIT",
   "version": "1.0.3",
   "scripts": {
-    "build": "node -e \"const args=process.argv.slice(2); const circuit=args[0]||'email_auth'; const output=args[1]||'.'; require('child_process').execSync('mkdir -p build/'+output+' && circom src/'+circuit+'.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build/'+output, {stdio:'inherit'})\"",
-    "dev-setup": "node -e \"const args=process.argv.slice(2); const circuit=args[0]||'email_auth'; const output=args[1]||'.'; require('child_process').execSync('NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build/'+output+' --circuit '+circuit, {stdio:'inherit'})\"",
+    "build": "NODE_OPTIONS=--max_old_space_size=16384 node -e \"const args=process.argv.slice(2); const circuit=args[0]; const output=args[1]||'.'; if(!circuit) throw new Error('Circuit name required: npm run build <circuit_name> [output_dir]'); require('child_process').execSync('mkdir -p build/'+output+' && circom src/'+circuit+'.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build/'+output, {stdio:'inherit'})\"",
+    "dev-setup": "NODE_OPTIONS=--max_old_space_size=16384 node -e \"const args=process.argv.slice(2); const circuit=args[0]; const output=args[1]||'.'; if(!circuit) throw new Error('Circuit name required: npm run dev-setup <circuit_name> [output_dir]'); require('child_process').execSync('NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build/'+output+' --circuit '+circuit, {stdio:'inherit'})\"",
     "gen-input": "NODE_OPTIONS=--max_old_space_size=8192 npx ts-node scripts/gen_input.ts",
     "test": "NODE_OPTIONS=--max_old_space_size=16384 jest",
     "test-large": "NODE_OPTIONS=--max_old_space_size=32768 jest --maxWorkers=1"
