--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -5,6 +5,7 @@ libs = ["../../node_modules", "lib"]
 optimizer = true
 # The following line `via-ir = true` is needed to compile this project using zksync features
 # via-ir = true 
+evm_version = "cancun"
 optimizer-runs = 20_000
 fs_permissions = [
     { access = "read", path = "./artifacts/WETH9.sol/WETH9.json" },
