docs: polish example env and readme

--- a/packages/relayer/.env.example
+++ b/packages/relayer/.env.example
@@ -1,27 +1,27 @@
-EMAIL_ACCOUNT_RECOVERY_VERSION_ID=1          # Version ID of the email account recovery.
-PRIVATE_KEY=""                      # Private key for Relayer's account.
-CHAIN_RPC_PROVIDER=http://127.0.0.1:8545
+EMAIL_ACCOUNT_RECOVERY_VERSION_ID=1 # Version ID of the email account recovery.
+PRIVATE_KEY="" # Private key for Relayer's account.
+CHAIN_RPC_PROVIDER=
 CHAIN_RPC_EXPLORER=
-CHAIN_ID=11155111                    # Chain ID of the testnet.
+CHAIN_ID=
 
-SMTP_SERVER=
+SMTP_SERVER= # https://github.com/zkemail/relayer-smtp
 
 PROVER_URL="https://prover.zk.email/api/prove"
-PROVER_API_KEY=""
+PROVER_API_KEY="" # contact us or deploy your own instance: https://github.com/zkemail/email-gpu-prover
 PROVER_BLUEPRINT_ID="7f3c3bc2-7c5d-4682-8d7f-f3d2f9046722"
 PROVER_ZKEY_DOWNLOAD_URL="https://storage.googleapis.com/circom-ether-email-auth/v2.0.2-dev/circuit_zkey.zip"
 PROVER_CIRCUIT_CPP_DOWNLOAD_URL="https://storage.googleapis.com/circom-ether-email-auth/v2.0.2-dev/circuit.zip"
 
 
-DATABASE_URL= "postgres://test@localhost/emailauth_test"
-RELAYER_EMAIL_ADDR=
-WEB_SERVER_ADDRESS="127.0.0.1:4500"
-EMAIL_TEMPLATES_PATH=  #Path to email templates, e.g. ./packages/relayer/eml_templates/
-REGEX_JSON_DIR_PATH=
+DATABASE_URL= # e.g "postgres://test@localhost/emailauth_test"
+RELAYER_EMAIL_ADDR= # a@b.com, relayer sends and receives emails via this address
+WEB_SERVER_ADDRESS="0.0.0.1:4500"
+EMAIL_TEMPLATES_PATH="./eml_templates"
+REGEX_JSON_DIR_PATH="./src/regex_json"
 
 DKIM_CANISTER_ID="fxmww-qiaaa-aaaaj-azu7a-cai"
-WALLET_CANISTER_ID=
-PEM_PATH="./.ic.pem"
+WALLET_CANISTER_ID= # https://proofofemail.notion.site/How-to-setup-ICP-account-for-relayer-cf80ad6187e94219b25152fb875309db
+PEM_PATH="./.ic.pem" 
 IC_REPLICA_URL="https://a4gq6-oaaaa-aaaab-qaa4q-cai.raw.icp0.io/?id=fxmww-qiaaa-aaaaj-azu7a-cai"
 
 JSON_LOGGER=false
