--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -8,7 +8,8 @@
     "build-legacy": "mkdir -p build && circom src/email_auth_legacy.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build",
     "build-recipient": "mkdir -p build && circom src/email_auth_with_recipient.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build",
     "dev-setup": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build --circuit email_auth",
-    "dev-setup-bls": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup-bls.ts --output ./build --circuit email_auth --power 23 --verbose",
+    "build-simple": "mkdir -p build && circom src/email_auth_simple.circom --prime bls12381 --r1cs --wasm --sym --c -l ../../node_modules -o ./build",
+    "dev-setup-bls": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup-bls.ts --output ./build --circuit email_auth_simple --power 5 --verbose",
     "dev-setup-no-timestamp": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build/no-timestamp --circuit email_auth_no_timestamp",
     "gen-input": "NODE_OPTIONS=--max_old_space_size=8192 npx ts-node scripts/gen_input.ts",
     "test": "NODE_OPTIONS=--max_old_space_size=16384 jest",
