--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -8,8 +8,9 @@
     "build-legacy": "mkdir -p build && circom src/email_auth_legacy.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build",
     "build-recipient": "mkdir -p build && circom src/email_auth_with_recipient.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build",
     "dev-setup": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build --circuit email_auth",
-    "build-simple": "mkdir -p build && circom src/email_auth_simple.circom --prime bls12381 --r1cs --wasm --sym --c -l ../../node_modules -o ./build",
-    "dev-setup-bls": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup-bls.ts --output ./build --circuit email_auth_simple --power 5 --verbose",
+    "build:simple": "mkdir -p build && circom src/email_auth_simple.circom --prime bls12381 --r1cs --wasm --sym --c -l ../../node_modules -o ./build",
+    "dev-setup:bls:simple": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup-bls.ts --output ./build --circuit email_auth_simple --power 5 --verbose",
+    "prove:simple": "mkdir -p build && echo '{\"i\":7}' > build/input.json && ./node_modules/.bin/snarkjs groth16 fullprove build/input.json build/email_auth_simple_js/email_auth_simple.wasm build/email_auth_simple.zkey build/proof.json build/public.json && ./node_modules/.bin/snarkjs groth16 verify build/email_auth_simple.vkey build/public.json build/proof.json",
     "dev-setup-no-timestamp": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build/no-timestamp --circuit email_auth_no_timestamp",
     "gen-input": "NODE_OPTIONS=--max_old_space_size=8192 npx ts-node scripts/gen_input.ts",
     "test": "NODE_OPTIONS=--max_old_space_size=16384 jest",
