chore: use old name

--- a/kubernetes/circuit-test-job.yml
+++ b/kubernetes/circuit-test-job.yml
@@ -1,15 +1,13 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: circuits-test-job
+  name: circuits-job
 spec:
   ttlSecondsAfterFinished: 60 # Delete automatically 1 minute after completion
   template:
     spec:
-      nodeSelector:
-        cloud.google.com/machine-family: c3
       containers:
-        - name: circuits-test-runner
+        - name: circuits-runner
           image: wshino/circuits-runner:test5
           imagePullPolicy: Always # Always pull the latest image
           env:
