--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -3,9 +3,9 @@
   "license": "MIT",
   "version": "1.0.0",
   "scripts": {
-    "build": "mkdir -p build && circom src/email_auth.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build",
-    "build-legacy": "mkdir -p build && circom src/email_auth_legacy.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build",
-    "build-recipient": "mkdir -p build && circom src/email_auth_with_recipient.circom --r1cs --wasm --sym --c -l ../../node_modules -o ./build",
+    "build": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/build-all.ts",
+    "build:all": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/build-all.ts",
+    "build:list": "npx ts-node scripts/build-all.ts --list",
     "dev-setup": "NODE_OPTIONS=--max_old_space_size=16384 npx ts-node scripts/dev-setup.ts --output ./build",
     "gen-input": "NODE_OPTIONS=--max_old_space_size=8192 npx ts-node scripts/gen_input.ts",
     "test": "NODE_OPTIONS=--max_old_space_size=8192 jest",
